# MuPDFCore

./: .gitignore  BuildNativeAssets.cmd  BuildTests.cmd  Doxyfile  MuPDFCore.sln  Readme.md  strong_name_key.snk
Demo/: Demo.csproj  Document2.oxps  Program.cs
MuPDFCore/: MuPDF.cs  MuPDFColorSpace.cs  MuPDFContext.cs  MuPDFCore.csproj  MuPDFDisplayList.cs  MuPDFDocument.Create.cs  MuPDFDocument.cs  MuPDFFont.cs  MuPDFImage.cs  MuPDFLinks.cs  MuPDFMultiThreadedPageRenderer.cs  MuPDFOptionalContentGroupConfiguration.cs  MuPDFOutline.cs  MuPDFPage.cs  MuPDFStructuredTextPage.cs  Rectangles.cs  TesseractLanguage.cs  Utils.cs
MuPDFCore.MuPDFRenderer/: AvaloniaBugFixes.cs  MuPDFCore.MuPDFRenderer.csproj  PDFRenderer.Properties.cs  PDFRenderer.cs  RectTransition.cs
MuPDFCore.NativeAssets/Linux-arm64/: Container.cs  Linux-arm64.csproj  MuPDFCore.NativeAssets.Linux-arm64.csproj
MuPDFCore.NativeAssets/Linux-loongarch64/: Container.cs  MuPDFCore.NativeAssets.Linux-x64.csproj
MuPDFCore.NativeAssets/Linux-musl-arm64/: Linux-musl-arm64.csproj  MuPDFCore.NativeAssets.Linux-musl-arm64.csproj
MuPDFCore.NativeAssets/Linux-musl-x64/: Container.cs  Linux-musl-x64.csproj  MuPDFCore.NativeAssets.Linux-musl-x64.csproj
MuPDFCore.NativeAssets/Linux-x64/: Linux-x64.csproj  MuPDFCore.NativeAssets.Linux-x64.csproj
MuPDFCore.NativeAssets/Mac-arm64/: Container.cs  Mac-arm64.csproj  MuPDFCore.NativeAssets.Mac-arm64.csproj
MuPDFCore.NativeAssets/Mac-x64/: Container.cs  Mac-x64.csproj  MuPDFCore.NativeAssets.Mac-x64.csproj
MuPDFCore.NativeAssets/Win-arm64/: Container.cs  MuPDFCore.NativeAssets.Win-arm64.csproj  Win-arm64.csproj
MuPDFCore.NativeAssets/Win-x64/: Container.cs  MuPDFCore.NativeAssets.Win-x64.csproj  Win-x64.csproj
MuPDFCore.NativeAssets/Win-x86/: Container.cs  MuPDFCore.NativeAssets.Win-x86.csproj  Win-x86.csproj
MuPDFCore/StructuredText/: MuPDFGridStructuredTextBlock.cs  MuPDFImageStructuredTextBlock.cs  MuPDFStructureStructuredTextBlock.cs  MuPDFStructuredTextBlock.cs  MuPDFStructuredTextPage.cs  MuPDFTextStructuredTextBlock.cs  MuPDFVectorStructuredTextBlock.cs
MuPDFCoreTestHost/: MuPDFCoreTestHost.csproj  Program.cs
PDFViewerDemo/: App.axaml  App.axaml.cs  DialogWindow.axaml  DialogWindow.axaml.cs  LinkDialogWindow.axaml  LinkDialogWindow.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs  OCRProgressWindow.axaml  OCRProgressWindow.axaml.cs  PDFViewerDemo.csproj  PasswordWindow.axaml  PasswordWindow.axaml.cs  Program.cs
Tests/: MuPDFColorSpaceTests.cs  MuPDFContextTests.cs  MuPDFDocumentTests.cs  MuPDFFontTests.cs  MuPDFImageTests.cs  MuPDFMultiThreadedPageRendererTests.cs  MuPDFOutlineTests.cs  MuPDFPageTests.cs  MuPDFStructuredTextPageTests.cs  MuPDFTests.cs  MuPDFWrapperTests.cs  RectanglesTests.cs  TesseractLanguageTests.cs  Tests.csproj
Tests/Data/: basic-v3plus2.epub.LICENSE
docs/: _avalonia_bug_fixes_8cs_source.html  _mu_p_d_f_8cs_source.html  _mu_p_d_f_color_space_8cs_source.html  _mu_p_d_f_context_8cs_source.html  _mu_p_d_f_display_list_8cs_source.html  _mu_p_d_f_document_8_create_8cs_source.html  _mu_p_d_f_document_8cs_source.html  _mu_p_d_f_font_8cs_source.html  _mu_p_d_f_image_8cs_source.html  _mu_p_d_f_links_8cs_source.html  _mu_p_d_f_multi_threaded_page_renderer_8cs_source.html  _mu_p_d_f_optional_content_group_configuration_8cs_source.html  _mu_p_d_f_outline_8cs_source.html  _mu_p_d_f_page_8cs_source.html  _mu_p_d_f_structured_text_page_8cs_source.html  _p_d_f_renderer_8_properties_8cs_source.html  _p_d_f_renderer_8cs_source.html  _rect_transition_8cs_source.html  _rectangles_8cs_source.html  _tesseract_language_8cs_source.html  _utils_8cs_source.html  annotated.html  annotated_dup.js  class_avalonia_1_1_animation_1_1_rect_transition-members.html  class_avalonia_1_1_animation_1_1_rect_transition.html  class_avalonia_1_1_animation_1_1_rect_transition.js  class_avalonia_1_1_animation_1_1_rect_transition__inherit__graph.map  class_avalonia_1_1_animation_1_1_rect_transition__inherit__graph.md5  class_mu_p_d_f_core_1_1_b_g_r_mu_p_d_f_color_space-members.html  class_mu_p_d_f_core_1_1_b_g_r_mu_p_d_f_color_space.html  class_mu_p_d_f_core_1_1_b_g_r_mu_p_d_f_color_space.js  class_mu_p_d_f_core_1_1_b_g_r_mu_p_d_f_color_space__inherit__graph.map  class_mu_p_d_f_core_1_1_b_g_r_mu_p_d_f_color_space__inherit__graph.md5  class_mu_p_d_f_core_1_1_c_b_z_creation_options-members.html  class_mu_p_d_f_core_1_1_c_b_z_creation_options.html  class_mu_p_d_f_core_1_1_c_b_z_creation_options.js  class_mu_p_d_f_core_1_1_c_m_y_k_mu_p_d_f_color_space-members.html  class_mu_p_d_f_core_1_1_c_m_y_k_mu_p_d_f_color_space.html  class_mu_p_d_f_core_1_1_c_m_y_k_mu_p_d_f_color_space.js  class_mu_p_d_f_core_1_1_c_m_y_k_mu_p_d_f_color_space__inherit__graph.map  (+372 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  (+103 more)
native/: CMakeLists.txt  build.cmd  build.sh
native/MuPDFWrapper/: CMakeLists.txt  MuPDFWrapper.cpp  MuPDFWrapper.h
native/MuPDFWrapper/include/mupdf/fitz/: write-pixmap.h
native/MuPDFWrapper/lib/win-arm64/: libmupdf.lib
native/MuPDFWrapper/lib/win-x64/: libmupdf.lib  libthirdparty.lib
native/MuPDFWrapper/lib/win-x86/: libmupdf.lib
(+9 files in other folders)
